--- a/.github/workflows/greetings.yml
+++ b/.github/workflows/greetings.yml
@@ -1,5 +1,7 @@
   name: Greetings Workflow
-  on: [push]
+  on:
+    issues:
+      types: [opened]
   jobs:
     build:
       runs-on: ubuntu-latest
