--- a/.github/workflows/build-java-app.yml
+++ b/.github/workflows/build-java-app.yml
@@ -1,45 +1,23 @@
-# This workflow will build a Java project with Maven
-##
-## More details on https://docs.github.com/en/actions/use-cases-and-examples/building-and-testing/building-and-testing-java-with-maven
-
-name: Build a Java Application
-
+name: Build app renygp
 on:
-  workflow_dispatch:
   push:
-    branches: [ "main" ]
-    paths:
-      - java-app/**
-  pull_request:
-    branches: [ "main" ]
-
+    branches:
+        - main
 jobs:
   build:
     runs-on: ubuntu-latest
-    permissions:
-      packages: write
-    defaults:
-      run:
-        # Set the working directory to the java-app directory
-        # works only for the shell.
-        working-directory: java-app
     steps:
-    - uses: actions/checkout@v4
-    - name: Set up JDK 21
-      uses: actions/setup-java@v4
-      with:
-        java-version: '21'
-        distribution: 'temurin'
-        cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml
-    - run: mkdir staging && cp target/*.jar staging
-    # Upload the build artifact
-    - uses: actions/upload-artifact@v4
-      with:
-        name: Package
-        path: java-app/staging
-    - name: Publish to GitHub Packages
-      run: mvn --batch-mode deploy
-      env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      - uses: actions/checkout@v4
+      - name: Set up JDK 21
+        uses: actions/setup-java@v4
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+      - name: Build with Gradle
+        run: mvn --no-daemon
+      - name: Run tests
+        run: mvn test --no-daemon
+      - name: Build JAR
+        run: mvn build --no-daemon
+      - name: Upload JAR artifact
+        uses: actions/upload-artifact@v4
