--- a/.github/workflows/build-java-app.yml
+++ b/.github/workflows/build-java-app.yml
@@ -14,10 +14,10 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
       - name: Build with Gradle
-        run: mvn --no-daemon
+        run: ./gradlew build --no-daemon
       - name: Run tests
-        run: mvn test --no-daemon
+        run: ./gradlew test --no-daemon
       - name: Build JAR
-        run: mvn build --no-daemon
+        run: ./gradlew bootJar --no-daemon
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
