--- a/.github/workflows/build-java-app.yml
+++ b/.github/workflows/build-java-app.yml
@@ -13,11 +13,11 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-      - name: Build with Gradle
-        run: ./gradlew build --no-daemon
+      - name: Build with Maven
+        run: mvn clean install --no-daemon
       - name: Run tests
-        run: ./gradlew test --no-daemon
+        run: mvn test --no-daemon
       - name: Build JAR
-        run: ./gradlew bootJar --no-daemon
+        run: mvn package --no-daemon
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
