--- a/.github/workflows/build-java-app.yml
+++ b/.github/workflows/build-java-app.yml
@@ -14,10 +14,10 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
       - name: Build with Maven
-        run: mvn clean install --no-daemon
+        run: mvn clean install
       - name: Run tests
-        run: mvn test --no-daemon
+        run: mvn test
       - name: Build JAR
-        run: mvn package --no-daemon
+        run: mvn package
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
