--- a/.github/workflows/build-java-app.yml
+++ b/.github/workflows/build-java-app.yml
@@ -14,6 +14,7 @@ jobs:
           java-version: '21'
           distribution: 'temurin'
       - name: Build JAR
-        run: mvn package
+        run: |
+          ./mvnw clean package -DskipTests
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
