--- a/.github/workflows/build-java-app.yml
+++ b/.github/workflows/build-java-app.yml
@@ -3,6 +3,8 @@ on:
   push:
     branches:
         - main
+    paths:
+    - java-app/**
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -15,6 +17,6 @@ jobs:
           distribution: 'temurin'
       - name: Build JAR
         run: |
-          mvn clean package -DskipTests
+          mvn package
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
