Update build app workflow

--- a/.github/workflows/build-java-app.yml
+++ b/.github/workflows/build-java-app.yml
@@ -1,7 +1,9 @@
 name: Build app renygp
 on:
   push:
-    branches: [main]
+    branches: [ "main" ]
+    paths:
+      - java-app/**
 jobs:
   build:
     runs-on: ubuntu-latest
