--- a/.github/workflows/build-java-app.yml
+++ b/.github/workflows/build-java-app.yml
@@ -26,3 +26,10 @@ jobs:
           mvn package
       - name: Upload JAR artifact
         uses: actions/upload-artifact@v4
+        with:
+          name: Package
+          path: java-app/staging
+      - name: Publish to GitHub Packages
+        run: mvn --batch-mode deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
