--- a/.github/workflows/build-java-app.yml
+++ b/.github/workflows/build-java-app.yml
@@ -1,9 +1,17 @@
-name: Build app renygp
+# This workflow will build a Java project with Maven
+##
+## More details on https://docs.github.com/en/actions/use-cases-and-examples/building-and-testing/building-and-testing-java-with-maven
+
+name: Build a Java Application
+
 on:
   push:
     branches: [ "main" ]
     paths:
       - java-app/**
+  pull_request:
+    branches: [ "main" ]
+
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -21,11 +29,16 @@ jobs:
         with:
           java-version: '21'
           distribution: 'temurin'
-      - name: Build JAR
-        run: |
-          mvn package
-      - name: Upload JAR artifact
-        uses: actions/upload-artifact@v4
+          cache: maven
+      - name: Build with Maven
+        run: mvn -B package --file pom.xml
+      - run: mkdir staging && cp target/*.jar staging
+      # Upload the build artifact
+      - uses: actions/upload-artifact@v4
         with:
           name: Package
           path: java-app/staging
+      - name: Publish to GitHub Packages
+        run: mvn --batch-mode deploy
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
