--- a/.github/workflows/scheduled-build.yml
+++ b/.github/workflows/scheduled-build.yml
@@ -2,7 +2,7 @@ name: Schedule Build Java App
 
 on:
   schedule:
-    - cron: '*/5 * * * *' # Runs every 5 minutes
+    - cron: '0 */1 * * * *' # Runs every 5 minutes
 
 jobs:
   trigger-workflow:
