with workflow dispatch

--- a/.github/workflows/build-java-app.yml
+++ b/.github/workflows/build-java-app.yml
@@ -5,6 +5,8 @@
 name: Build a Java Application
 
 on:
+  workflow_dispatch:
+    # Trigger the workflow manually
   push:
     branches: [ "main" ]
   pull_request:
