--- a/.github/workflows/workflow-commands.yml
+++ b/.github/workflows/workflow-commands.yml
@@ -45,7 +45,7 @@ jobs:
         name: Generate, mask, and output a secret
         run: |
           the_secret=$((RANDOM))
-          echo "::add-mask::$the_secret"
+#          echo "::add-mask::$the_secret"
           echo "secret-number=$the_secret" >> "$GITHUB_OUTPUT"
       - name: Print the secret output (protected by a mask)
         run:  echo "the secret number is ${{ steps.sets-a-secret.outputs.secret-number }}"
