--- a/.github/workflows/workflow-commands.yml
+++ b/.github/workflows/workflow-commands.yml
@@ -44,7 +44,7 @@ jobs:
       - id: sets-a-secret
         name: Generate, mask, and output a secret
         run: |
-          the_secret=$((RANDOM))
+          the_secret=123
           echo "secret-number=$the_secret" >> "$GITHUB_OUTPUT"
       - name: Print the secret output (protected by a mask)
         run:  echo "the secret number is ${{ steps.sets-a-secret.outputs.secret-number }}"
