--- a/.github/workflows/debug-vars.yml
+++ b/.github/workflows/debug-vars.yml
@@ -30,4 +30,5 @@ jobs:
 
       - name: Print Secret-Based Variable
         run:
+          echo "::add-mask::$MY_VAR"  # Mask the secret
           echo "Final Secret Value is ${{ secrets.MY_VAR }}"  # And there?
