--- a/.github/workflows/on-new-pull-request.yml
+++ b/.github/workflows/on-new-pull-request.yml
@@ -20,6 +20,7 @@ jobs:
         uses: actions/checkout@v4
       - name: Try to add label
         run: |
+          gh label create "needs-review" --color "#FBCA04" --description "Pull request needs review" || true
           gh pr edit ${{ github.event.pull_request.number }} --add-label "needs-review"
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
